--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,18 @@ Text Domain:  Polo
 28. Responsive
 
 
+
+
 /*----------- 1. Body --------------*/
+
+
+:root {
+  --primary: #1c95d1;
+  --secondary: #001064;
+  --light: #F6F7F8;
+  --dark: #010A35;
+}
+
 body {
 	font-size: 12px;
 }
@@ -132,14 +143,13 @@ legend {
 }
 
 /*---------- 3. Header ---------*/ 
-.logo {
-	float: left;
-}
+
 .header-container {
 	background: #1c95d1;
 }
 .header-top {
 	border-bottom: 1px dotted #65c3f1;
+  background-color: var(--primary); 
 	padding: 0px 0px 6px 0px;
 }
 .header .logo {
@@ -147,7 +157,6 @@ legend {
 	margin-top: 20px;
 	text-align: left;
 	display: block;
-	padding-bottom: 15px;
 	display: inline-block
 }
 .header .logo a img {
@@ -159,6 +168,7 @@ legend {
 	padding: 0px;
 	margin: 8px 0px 0px 15px;
 	font-size: 12px;
+  
 	color: #d1f0ff;
 	font-family: 'Open Sans', sans-serif;
 }
@@ -375,15 +385,16 @@ a.block-currency:focus {
 }
 .search-btn-bg {
 	background-color: #fdd922;
-	border: 1px solid #e0bc27;
 	border-radius: 0 2px 2px 0;
 	color: #565656;
 	cursor: pointer;
+  right: 0;
+  height: 32px;
 	font-weight: bold;
-	height: 34px;
 	line-height: 17px;
+  position: absolute;
 	padding: 5px 15px;
-	position: absolute;
+  
 	text-transform: uppercase;
 }
 .searchIconNew {
@@ -7869,7 +7880,6 @@ button.button.btn-proceed-checkout span {
 .brand-logo {
 	background-color: #f5f5f5;
 	margin: 15px 0px 0px 0px;
-	padding: 0px 0px 6px 0px;
 }
 .brand-logo .slider-items-products .item {
 	text-align: center;
