--- a/src/components/missiya/Missiya.css
+++ b/src/components/missiya/Missiya.css
@@ -1,42 +1,13 @@
-blockquote {
-    margin: 0 0 20px;
-    padding: 20px 20px 30px 67px;
-    border-left: 3px solid #eaeaea;
-    background: #f8f8f8;
-}
-blockquote, blockquote p {
-    font-size: 14px;
-    line-height: 24px;
-    color: #5c5c5c;
-    font-style: italic;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    position: relative;
-}
-.entry-content {
-    margin-bottom: 20px;
-    font-size: 15px;
-}
-li {
-    display: list-item;
-    text-align: -webkit-match-parent;
-}
-ul {
-    display: block;
-    list-style-type: disc;
-    margin-top: 1em;
-    margin-bottom: 1 em;
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 40px;
-}
-.popular-posts {
+.blog-wrapper{
     padding: 0px;
+    font-size: 15px;
+    margin: auto;
+    list-style: none;
+    margin-top: 20px;
     margin-bottom: 10px;
-}
-.row {
-    margin-right: -15px;
-    margin-left: -15px;
-}
-div#n2-ss-4 .n2-ss-slide-limiter {
-    max-width: 1200px;
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 21px;
+    color: inherit;
+
 }
