--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+.home-page{
+    max-width: 80%;
+    margin: 0 auto;
+}
+
 .main-banner{
     width: 100%;
     max-height: 81.3vh;
